--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "nextjs",
     "zeit"
   ],
+  "now": {
+    "alias": "ntwcklng.now.sh"
+  },
   "author": "Marvin Mieth <ntwcklng@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "next": "^2.0.0",
+    "next": "^2.0.0-beta.31",
+    "nprogress": "^0.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
