--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "next-blog",
+  "name": "ntwcklng",
   "version": "0.0.1",
-  "description": "Next.js Blog Boilerplate",
+  "description": "ntwcklng",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -13,12 +13,12 @@
     "zeit"
   ],
   "now": {
-    "alias": "ntwcklng.now.sh"
+    "alias": ["ntwcklng.now.sh", "ntwcklng.de"]
   },
   "author": "Marvin Mieth <ntwcklng@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "next": "^2.0.0-beta.31",
+    "next": "^2.0.0-beta.39",
     "nprogress": "^0.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
