--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "zeit"
   ],
   "now": {
-    "alias": ["ntwcklng.now.sh", "ntwcklng.de"]
+    "alias": [
+      "ntwcklng.now.sh"
+    ]
   },
   "author": "Marvin Mieth <ntwcklng@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "next": "^2.0.0-beta.39",
+    "next": "^3.2.2",
     "nprogress": "^0.2.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
